6778669: Patch from Red Hat -- fixes compilation errors

Some fixes which are required to build on recent GCCs.

Reviewed-by: never, kvn